@@ -1,3 +1,7 @@
+2001-06-04  Tambet Ingo  <tambet@ximian.com>
+
+	* users-conf.in (change_user_chfn): Added hack to support Debian's chfn.
+
 2001-06-01  Arturo Espinosa Aldama  <arturo@ximian.com>
 
 	* network.pl.in (xst_network_dialing_set): Remove old sections
